tests/baselines/reference/nodeModulesPackageImportsRootWildcard(module=node16).errors.txt
index.cts(2,21): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("#/foo.js")' call instead.
index.cts(3,21): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("#/features/bar.js")' call instead.
index.cts(4,21): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("#/nested/deep/baz.js")' call instead.


==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "imports": {
            "#/*": "./src/*"
        }
    }
==== src/foo.ts (0 errors) ====
    export const foo = "foo";
==== src/features/bar.ts (0 errors) ====
    export const bar = "bar";
==== src/nested/deep/baz.ts (0 errors) ====
    export const baz = "baz";
==== index.ts (0 errors) ====
    // esm format file
    import { foo } from "#/foo.js";
    import { bar } from "#/features/bar.js";
    import { baz } from "#/nested/deep/baz.js";
    foo;
    bar;
    baz;
==== index.mts (0 errors) ====
    // esm format file
    import { foo } from "#/foo.js";
    import { bar } from "#/features/bar.js";
    import { baz } from "#/nested/deep/baz.js";
    foo;
    bar;
    baz;
==== index.cts (3 errors) ====
    // cjs format file
    import { foo } from "#/foo.js";
                        ~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("#/foo.js")' call instead.
    import { bar } from "#/features/bar.js";
                        ~~~~~~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("#/features/bar.js")' call instead.
    import { baz } from "#/nested/deep/baz.js";
                        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("#/nested/deep/baz.js")' call instead.
    foo;
    bar;
    baz;
    